<resources>
    <string name="selection_limiter">Cant select more than %d items.</string>
    <string name="message_to_drag_up">Drag images up for gallery</string>
    <string name="ok">OK</string>
    <string name="tap_to_select">Tap photo to select</string>
    <string name="selected">Selected</string>
    <string name="recent">Recent</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="capture">Capture</string>
    <string name="flash">Flash</string>
    <string name="contentfacing">ContentFacing</string>
    <string name="send">Send</string>
    <string name="selection">Selection</string>
    <string name="back">Back</string>
    <string name="video_shoot_tip"></string>
    <string name="compressing">Compressing</string>
    <string name="trimming">Trimming</string>
    <string name="next">Next</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="gallery">Gallery</string>
    <string name="file">Files</string>
    <string name="audio">Audio</string>
    <string name="loading">Loading...</string>
    <string name="attachement">Attachments</string>
    <string name="all">All</string>
    <string name="pdf">PDF</string>
    <string name="doc">DOC</string>
    <string name="zip">ZIP</string>
    <string name="others">OTHERS</string>
    <string name="menu_title_search">Search</string>

</resources>
