<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    xmlns:cpb="http://schemas.android.com/apk/res-auto"
    tools:context=".picker.activity.CameraActivity">

    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:cameraAudio="on"
        app:cameraCropOutput="false"
        app:cameraFacing="back"
        app:cameraFlash="auto"
        app:cameraGrid="off"
        app:cameraHdr="on"
        app:cameraJpegQuality="100"
        app:cameraPlaySounds="true"
        app:cameraSessionType="picture"
        app:cameraVideoCodec="deviceDefault"
        app:cameraVideoMaxDuration="-1"
        app:cameraVideoMaxSize="-1"
        app:cameraVideoQuality="max480p"
        app:cameraWhiteBalance="auto" />

    <FrameLayout
        android:id="@+id/mainFrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <View
            android:id="@+id/status_bar_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_top"
            android:background="@color/colorPrimary"
            android:translationY="@dimen/margin_top_nve" />


        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top"
            android:alpha="1">

            <FrameLayout
                android:id="@+id/bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-2dp"
                android:layout_marginLeft="-2dp"
                android:minHeight="194dp"
                app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-2dp"
                    android:layout_marginLeft="-2dp"
                    android:layout_marginTop="56dp"
                    android:background="#fff"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/fastscroll_bubble"
                    android:layout_width="140dp"
                    android:layout_height="33dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="52dp"
                    android:layout_marginRight="52dp"
                    android:background="@drawable/trigger"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:visibility="gone"
                    tools:textColor="#000" />

                <FrameLayout
                    android:id="@+id/fastscroll_scrollbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginTop="56dp"
                    android:minWidth="20dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/fastscroll_track"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:minWidth="45dp"
                        tools:ignore="ContentDescription" />


                    <ImageView
                        android:id="@+id/fastscroll_handle"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:elevation="8dp"
                        android:minWidth="20dp"
                        android:paddingStart="5dp"
                        android:paddingLeft="5dp"
                        android:src="@drawable/handle" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp">

                    <FrameLayout
                        android:id="@+id/topbar"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="#fff"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/selection_back"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/ic_arrow_back_black_24dp"
                            android:contentDescription="@string/back"/>

                        <TextView
                            android:id="@+id/selection_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|start"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical"
                            android:textColor="#fff"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/selection_ok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp"
                            android:gravity="center_vertical"
                            android:text="@string/ok"
                            android:textColor="#fff"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/selection_check"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp"
                            android:contentDescription="@string/selection"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_check_box" />

                    </FrameLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/instantRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="82dp" />
                </FrameLayout>
            </FrameLayout>

        </android.support.design.widget.CoordinatorLayout>

        <FrameLayout
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="100dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/circular_button"
                android:contentDescription="@string/send"
                android:padding="12dp"
                android:src="@drawable/ic_check_black_24dp" />

            <TextView
                android:id="@+id/img_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:textColor="#fff"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/bottomButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <com.skrumble.picketeditor.CircularProgressBar
                android:id="@+id/record_circular_progress_bar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center|bottom"
                cpb:progressColor="@color/ally_accent_color"
                cpb:barStrokeWidth="4"
                cpb:backgroundWidth="4"
                android:layout_marginBottom="30dp"
                cpb:textSize="8sp"
                cpb:roundedCorners="true"
                cpb:suffix=""
                cpb:prefix=""
                cpb:progressText=""
                cpb:progressTextColor="@color/ally_accent_color"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/clickme"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="30dp"
                android:background="@drawable/ring"
                android:contentDescription="@string/capture" />

            <ImageView
                android:id="@+id/flash"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|start"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/flash"
                android:padding="11dp"
                android:src="@drawable/ic_flash_off_black_24dp" />

            <ImageView
                android:id="@+id/front"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/contentfacing"
                android:padding="11dp"
                android:src="@drawable/ic_photo_camera" />

            <TextView
                android:id="@+id/camera_view_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="5dp"
                android:text="@string/message_to_drag_up"
                android:textColor="#fff"
                android:textSize="12sp" />
        </FrameLayout>

    </FrameLayout>

</FrameLayout>
